# json-for-modern-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml
doc/examples/: dump.cpp  dump.link  dump.output
src/: json.hpp  json.hpp.re2c
test/: CMakeLists.txt  unit.cpp
test/src/: StlAllocatorMock.hpp  StlAllocatorMockState.hpp  unit.cpp
